[tool.poetry]
name = "luigi-pipe-learning"
version = "0.1.0"
description = ""
authors = ["Uemerson Pinheiro Junior <uemersonpinheirojunior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
luigi = "^3.5.1"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"
flake8 = "^4"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
